# aspectation-prototype-rust

./: .gitignore  Cargo.toml  Copyright  README.md  build.properties  build.rs  build.sh  clippy.sh  run.sh  test.sh
project/analytics/: complexity.altc  domain.altc  side_effect.altc
project/hashes/: main.hsh
project/hints/: complexity.hnt  side_effect.hnt
project/src/: main.astn  main.astn.txt
src/: files.rs  lib.rs  main.rs  model.rs  paths.rs  settings.rs  utils.rs
src/aspects/: analytics.rs  analytics_parser.rs  hint_parser.rs  hints.rs  mod.rs  model.rs  register.rs  utils.rs
src/aspects/complexity/: analytics.rs  aspect.rs  constraint.rs  hints.rs  model.rs
src/aspects/side_effect/: analytics.rs  aspect.rs  constraint.rs  hints.rs  mod.rs  model.rs  parsing.rs
src/generator/: code_generator.rs  llvm_wrapper.rs  mod.rs  model.rs  native_funcs.rs
src/morphism_parser/: parser.rs
src/parsing/: lines_reader.rs  mod.rs  model.rs  tokenizer.rs  utils.rs
src/semantic/: core_morphisms.rs  hashes.rs  mod.rs  model.rs  morphisms_and_aspects.rs  utils.rs
tests/: complexity_aspect.rs  hashes.rs  hints.rs  side_effects_aspect.rs
