[package]
name = "aspectation-prototype"
version = "0.1.0"
authors = ["jinnzest <jinnzest@users.noreply.github.com>"]

[dependencies]
llvm-sys = "70"
lalrpop-util = "0.16.0"
libc = "0.2"
rust-crypto = "0.2.36"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.16.0"