[package]
name = "aspectation-prototype"
version = "0.1.0"
authors = ["jinnzest <jinnzest@users.noreply.github.com>"]
license = "MIT"

[dependencies]
llvm-sys = "80.1.1"
#lalrpop-util = "0.17.2"
libc = "0.2.62"
rust-crypto = "0.2.36"
config = "0.9.3"
lazy_static = "1.4.0"

[build-dependencies]
#lalrpop = "0.17.2"
quickcheck = "0.9.0"
quickcheck_macros = "0.8.0"

[lib]
test = false
